objects/State__c.object
<CustomObject>
    <fields>
        <fullName>COUNTRY_CODE__c</fullName>
        <label>COUNTRY CODE</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipName>State</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Long_Name__c</fullName>
        <label>Long Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Display Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Short_Name__c</fullName>
        <label>Short Name</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>BLN State</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Long_Name__c</columns>
        <columns>Short_Name__c</columns>
        <columns>Country__c</columns>
        <columns>Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>United</fullName>
        <columns>NAME</columns>
        <columns>Long_Name__c</columns>
        <columns>Short_Name__c</columns>
        <columns>Country__c</columns>
        <columns>Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>contains</operation>
            <value>CC-0000</value>
        </filters>
        <label>United</label>
    </listViews>
    <nameField>
        <label>State Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BLN States</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>